--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
             <li>The-Vinh Nguyen (Vietnam), MS student since 9/2021</li>
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
+            <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
       		  </ul>
         </div>
