--- a/easteregg.html
+++ b/easteregg.html
@@ -22,9 +22,8 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-		<img src="logo.png" width="293" height="86">
-      <!-- <h1>PSHH Laboratory</h1> -->
-      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="#research">#intro</a>] [<a href="#member">#members</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
+      <h1>Internal Information</h1>
+      <p class="lead" style="text-align:center;"><br>PSHH Lab, Sejong University</p>
     </div>
   </header>
 
@@ -32,13 +31,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>INTRODUCTION <a href="#page-top" title="Home">&#9776;</a></h5>
-          <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at the Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications with the aim of intelligent human networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family. Korean and international citizens are all welcome!</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
+          
   <section id="member" class="bg-light">
     <div class="container">
       <div class="row">
@@ -93,7 +86,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>. In press. [<a href="https://doi.org/10.1016/j.jnca.2022.103564">Elsevier</a>]</li>
+        <li><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>. In press. [<a href="">Elsevier</a>]</li>
         <li>Truong TP, Tuong VD, <b>Dao NN</b>, and Cho S, "FlyReflect: Joint flying IRS trajectory and phase shift design using deep reinforcement learning", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3218740">IEEE</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
         <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
