--- a/easteregg.html
+++ b/easteregg.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>Research Orientation</h5> &emsp; <a href="/orientation.pdf">Download here</a>
+          <h5>Research Orientation</h5> &emsp; <a href="/Orientation.pdf">Download here</a>
         </div>
       </div>
     </div>
