--- a/easteregg.html
+++ b/easteregg.html
@@ -58,6 +58,20 @@
     </div>
   </section>
 
+  <section id="proxy" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h5>SJU Proxy</h5>
+            <ul class="lead" style="list-style-type:square">
+            <li>Step 1: Add https://eproxy.sejong.ac.kr/link.n2s?url= before the URL</li>
+            <li>Step 2: Login using your student number and password</li>
+            </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="research" class="bg-light">
     <div class="container">
       <div class="row">
