--- a/easteregg.html
+++ b/easteregg.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>Internal Information</h1>
-      <p class="lead" style="text-align:center;"><br>PSHH Lab, Sejong University</p>
+      <p class="lead" style="text-align:center;">PSHH Lab, Sejong University</p>
     </div>
   </header>
 
@@ -63,6 +63,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>SJU Proxy</h5>
+            <i>Using the SJU proxy service, students can access scientific resources as in Seoul campus.</i>
             <ul class="lead" style="list-style-type:square">
             <li>Step 1: Add https://eproxy.sejong.ac.kr/link.n2s?url= before the URL</li>
             <li>Step 2: Login using your student number and password</li>
