--- a/nndao.html
+++ b/nndao.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>Nhu-Ngoc DAO</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea.<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
     </div>
   </header>
 
