--- a/photos.html
+++ b/photos.html
@@ -96,13 +96,13 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 2</div>
+  <div class="numbertext">December 24, 2022</div>
   <img src="photo/20221224.jpeg" style="width:100%; height:100%">
   <div class="text">[Year-end dinner 2022] Welcome Fayshal!</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 2</div>
+  <div class="numbertext">September 14, 2022</div>
   <img src="photo/20220914.jpeg" style="width:100%; height:100%">
   <div class="text">[Spring 2022] Welcome Haile!</div>
 </div>
@@ -132,7 +132,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 5000); // Change image every 2 seconds
+  setTimeout(showSlides, 5000); // Change image every 5 seconds
 }
 </script>
 
