--- a/photos.html
+++ b/photos.html
@@ -87,7 +87,7 @@ img {vertical-align: middle;}
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Photo Galary</h1>
+      <h1>Photo Gallery</h1>
       <p class="lead" style="text-align:center;">PSHH Lab, Sejong University</p>
     </div>
   </header>
@@ -106,10 +106,17 @@ img {vertical-align: middle;}
   <img src="photo/20220914.jpeg" style="width:100%; height:100%">
   <div class="text">[Spring 2022] Welcome Haile!</div>
 </div>
+
+<div class="mySlides fade">
+  <img src="photo/vr360.jpeg" style="width:100%; height:100%">
+  <div class="text" style="font-size: 30px; bottom: 50%; padding: 0px;"><a href="360vr.html">Click to see the VR tour!</a></div>
+</div>
+
 </div>
 <br>
 
 <div style="text-align:center">
+  <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
