--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container text-center">
 		<img src="logo.png" width="293" height="86">
       <!-- <h1>PSHH Laboratory</h1> -->
-      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="#research">#intro</a>] [<a href="#member">#members</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>]</p>
+      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="#research">#intro</a>] [<a href="#member">#members</a>] [<a href="#project">#project</a>] [<a href="#chapter">#publication</a>] [<a href="photos">#photo</a>]</p>
     </div>
   </header>
 
