--- a/photos.html
+++ b/photos.html
@@ -104,7 +104,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">September 14, 2022</div>
   <img src="photo/20220914.jpeg" style="width:100%; height:100%">
-  <div class="text">[Spring 2022] Welcome Haile!</div>
+  <div class="text">[Fall 2022] Welcome Haile!</div>
 </div>
 
 <div class="mySlides fade">
