--- a/easteregg.html
+++ b/easteregg.html
@@ -34,7 +34,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>Internet Access</h5>
       		  <ul class="lead" style="list-style-type:square">
-      			<li>WiFi SSID: PSHH &emsp; Password: PSHHlab2020!</li>
+      			<li>WiFi SSID: PSHH &emsp; Password: pshh2020!</li>
             <li>WiFi SSID: sejong-guest &emsp; Password: 0234083114</li>
       		  </ul>
         </div>
