--- a/nndao.html
+++ b/nndao.html
@@ -63,12 +63,12 @@
         <div class="col-lg-12 mx-auto">
           <h5>TEACHING COURSE</h5>
       <ul class="lead" style="list-style-type:square">
-      <li>Wireless communications (Undergraduate course)</li>
-      <li>ICT project management (Undergraduate course)</li>
-      <li>Converged IP networks (Graduate course)</li>
-      <li>Mobile networks (Graduate course)</li>
-      <li>Advanced computer networks (Graduate course)</li>
-      <li>Research methodologies (Graduate course)</li>
+      <li>Wireless communications (Undergraduate)</li>
+      <li>ICT project management (Undergraduate)</li>
+      <li>Converged IP networks (Graduate)</li>
+      <li>Mobile networks (Graduate)</li>
+      <li>Advanced computer networks (Graduate)</li>
+      <li>Research methodologies (Graduate)</li>
       </ul>
         </div>
       </div>
