--- a/nndao.html
+++ b/nndao.html
@@ -64,6 +64,7 @@
           <h5>TEACHING COURSE</h5>
       <ul class="lead" style="list-style-type:square">
       <li>Wireless communications (Undergraduate)</li>
+      <li>Digital systems (Undergraduate)</li>
       <li>ICT project management (Undergraduate)</li>
       <li>Converged IP networks (Graduate)</li>
       <li>Mobile networks (Graduate)</li>
