--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li><b>Dao NN</b>, Tu NH, Thanh TT, Bao VNQ, Na W, and Cho S, "Neglected infrastructures for 6G–Underwater communications: How mature are they?", <i>Journal of Network and Computer Applications</i>. In press. [<a href="">Elsevier</a>]</li>
         <li>Truong TP, Tuong VD, <b>Dao NN</b>, and Cho S, "FlyReflect: Joint flying IRS trajectory and phase shift design using deep reinforcement learning", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3218740">IEEE</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
         <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
