--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h5>MEMBERS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student since 9/2021</li>
+            <li>The-Vinh Nguyen (Vietnam), MS student since 9/2021. &emsp; Publication: <a href="#j48" title="Project">[J48]</a>, <a href="#j49" title="Project">[J49]</a></li>
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
@@ -93,14 +93,14 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li><b>Dao NN</b>, Tu NH, Thanh TT, Bao VNQ, Na W, and Cho S, "Neglected infrastructures for 6G–Underwater communications: How mature are they?", <i>Journal of Network and Computer Applications</i>. In press. [<a href="">Elsevier</a>]</li>
         <li>Truong TP, Tuong VD, <b>Dao NN</b>, and Cho S, "FlyReflect: Joint flying IRS trajectory and phase shift design using deep reinforcement learning", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3218740">IEEE</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
         <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
         <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>. In press. [<a href="https://doi.org/10.1109/JSYST.2022.3192066">IEEE</a>]</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>]</li>
-        <li><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>, vol. 211, p. 103564, 2023. [<a href="https://doi.org/10.1016/j.jnca.2022.103564">Elsevier</a>]</li>
-        <li><b>Nguyen TV</b>, Tran AT, <b>Dao NN</b>, Moon H, and Cho S, "Information fusion on delivery: A survey on the roles of mobile edge caching systems", <i>Information Fusion</i>, vol. 89, pp. 486-509, 2023. [<a href="https://doi.org/10.1016/j.inffus.2022.08.029">Elsevier</a>]</li>
+        <li><b>Dao NN</b>, Tu NH, Thanh TT, Bao VNQ, Na W, and Cho S, "Neglected infrastructures for 6G–Underwater communications: How mature are they?", <i>Journal of Network and Computer Applications</i>, vol. 213, p. 103595, 2023. [<a href="https://doi.org/10.1016/j.jnca.2023.103595">Elsevier</a>]</li>
+        <li id="j49"><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>, vol. 211, p. 103564, 2023. [<a href="https://doi.org/10.1016/j.jnca.2022.103564">Elsevier</a>]</li>
+        <li id="j48"><b>Nguyen TV</b>, Tran AT, <b>Dao NN</b>, Moon H, and Cho S, "Information fusion on delivery: A survey on the roles of mobile edge caching systems", <i>Information Fusion</i>, vol. 89, pp. 486-509, 2023. [<a href="https://doi.org/10.1016/j.inffus.2022.08.029">Elsevier</a>]</li>
         <li><b>Dao NN</b>, "Internet of wearable things: Advancements and benefits from 6G technologies", <i>Future Generation Computer Systems</i>, vol. 138, pp. 172-184, 2023. [<a href="https://doi.org/10.1016/j.future.2022.07.006">Elsevier</a>]</li>
         <li><b>Dao NN</b>, Tran AT, Tu NH, Thanh TT, Bao VNQ, and Cho S, "A contemporary survey on live video streaming from a computation-driven perspective", <i>ACM Computing Surveys</i>, vol. 54, no. 10s, p. 202, 2022. [<a href="https://doi.org/10.1145/3519552">ACM</a>]</li>
         <li><b>Dao NN</b>, Do TH, Cho S, and Dustdar S, "Information revealed by vision: A review on the next-generation OCC standard for AIoV", <i>IT Professional</i>, vol. 24, no. 4, pp. 58-65, 2022. [<a href="https://doi.org/10.1109/MITP.2022.3180354">IEEE</a>]</li>
