--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h5>MEMBERS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student since 9/2021. &emsp; Publication: <a href="#j48" title="Project">[J48]</a>, <a href="#j49" title="Project">[J49]</a></li>
+            <li>The-Vinh Nguyen (Vietnam), MS student since 9/2021</li>
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
