--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="">IEEE</a>]</li>
+        <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3279196">IEEE</a>]</li>
        <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 10, no. 3, pp. 1472-1486, 2023. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 7, pp. 5704-5718, 2023. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>]</li>
