--- a/easteregg.html
+++ b/easteregg.html
@@ -49,7 +49,7 @@
           <h5>Printer</h5>
       		  <ul class="lead" style="list-style-type:square">
             <li>Step 1: Wirelessly access the PSHH WiFi network</li>
-            <li>Step 2: Add the printer via IP address at 192.168.0.10</li>
+            <li>Step 2: Add the printer via IP address at 10.0.0.10</li>
       			<li>Step 3: Add the scanner using the same IP address above</li>
       		  </ul>
             <i>Note: The printer is located at room #431</i>
@@ -78,6 +78,16 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>Research Orientation</h5> &emsp; <a href="/Orientation.pdf">Download here</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="pptxtemp" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h5>Powerpoint template</h5> &emsp; <a href="/pptxtemplate.pptx">Download here</a>
         </div>
       </div>
     </div>
