--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="gray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Current institution: __ </i> </font> </li>
+            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="gray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Next institution: __ </i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -93,8 +93,9 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATION [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3279196">IEEE</a>]</li>
-       <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
+        <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
         <li>Masood A, Ha T, Lakew DS, <b>Dao NN</b>, and Cho S, "Intelligent TCP congestion control scheme in Internet of deep space things communication", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 10, no. 3, pp. 1472-1486, 2023. [<a href="https://doi.org/10.1109/TNSE.2022.3212534">IEEE</a>]</li>
 				<li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent offloading and resource allocation in heterogeneous aerial access IoT networks", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 7, pp. 5704-5718, 2023. [<a href="https://doi.org/10.1109/JIOT.2022.3161571">IEEE</a>]</li>
         <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>, vol. 17, no. 1, pp. 1559-1568, 2023. [<a href="https://doi.org/10.1109/JSYST.2022.3192066">IEEE</a>]</li>
