--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
   </section>
 
-  <section id="journal" class="bg-light"> Teshager Hailemariam Moges, Demeke Shumeye Lakew, Ngoc Phi Nguyen, Nhu-Ngoc Dao, and Sungrae Cho, "Cellular Internet of Things: Use Cases, Technologies, and Future Work," to appear in Elsevier Internet of Things
+  <section id="journal" class="bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
