--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li><b>Moges TH</b>, Lakew DS, Nguyen NP, <b>Dao NN</b>, and Cho S, "Cellular Internet of things: Use cases, technologies, and future work", <i>Internet of Things</i>. In press. [<a href="https://doi.org/">Elsevier</a>]</li>
+        <li><b>Moges TH</b>, Lakew DS, Nguyen NP, <b>Dao NN</b>, and Cho S, "Cellular Internet of things: Use cases, technologies, and future work", <i>Internet of Things</i>. In press. [<a href="https://doi.org/10.1016/j.iot.2023.100910">Elsevier</a>]</li>
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>. In press. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
         <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3279196">IEEE</a>]</li>
         <li>Le AT, Do DT, <b>Dao NN</b>, Nguyen ND, and Silva A, "New look at secure performance of massive MIMO with low-resolution DACs", <i>ICT Express</i>. In press. [<a href="https://doi.org/10.1016/j.icte.2022.09.004">Elsevier</a>]</li>
