--- a/nndao.html
+++ b/nndao.html
@@ -23,7 +23,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>Nhu-Ngoc DAO</h1>
-      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="https://publons.com/researcher/1405959/nhu-ngoc-dao/">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
+      <p class="lead" style="text-align:center;">Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="https://www.webofscience.com/wos/author/rid/D-7931-2018">ResearcherID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56810883300">ScopusID</a>, <a href="https://scholar.google.co.kr/citations?hl=en&user=rWmFrIgAAAAJ&view_op=list_works&sortby=pubdate">GoogleScholar</a>, <a href="https://www.researchgate.net/profile/Nhu_Ngoc_Dao/publications">Researchgate</a>]</p>
     </div>
   </header>
 
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h5>BIOGRAPHY</h5>
-          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining the Sejong University, he was a postdoc researcher at the Institute of Computer Science, University of Bern, Switzerland from 2019 to 2020. He is an Editor of the Scientific Reports. His research interests include network softwarization, mobile cloudization, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE and a Professional Member of ACM. Contact him at nndao@sejong.ac.kr.</p>
+          <p class="lead">Nhu-Ngoc Dao is an Assistant Professor at the Department of Computer Science and Engineering, Sejong University, Seoul, Korea. He received his M.S. and Ph.D. degrees in computer science at the School of Computer Science and Engineering, Chung-Ang University, Seoul, Korea, in 2016 and 2019, respectively. He received the B.S. degree in electronics and telecommunications from the Posts and Telecommunications Institute of Technology, Hanoi, Viet Nam, in 2009. Prior to joining Sejong University, he was a Visiting Researcher with the University of Newcastle, Callaghan, NSW, Australia, in 2019 and a Postdoc Researcher with the Institute of Computer Science, University of Bern, Switzerland, from 2019 to 2020. He is currently an Editor of the <i>Scientific Reports</i> and <i>PLOS ONE</i> journals. His research interests include network softwarization, mobile cloudification, communication security, intelligent systems, and the Intelligence of Things. Dr. Dao is a Senior Member of IEEE and a Member of ACM. Contact him at nndao@sejong.ac.kr.</p>
         </div>
       </div>
     </div>
@@ -69,6 +69,8 @@
       <li>Converged IP networks (Graduate)</li>
       <li>Mobile networks (Graduate)</li>
       <li>Advanced computer networks (Graduate)</li>
+      <li>Advanced broadband communications (Graduate)</li>
+      <li>Special topics on IoT technologies (Graduate)</li>
       <li>Research methodologies (Graduate)</li>
       </ul>
         </div>
@@ -93,7 +95,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROFESSIONAL ACTIVITIES</h5>
 				<ul class="lead" style="list-style-type:square">
-					<li>Editor: <a href="https://www.nature.com/srep/about/editors#electrical-engineering">Scientific Reports</a>;</li>
+					<li>Editor: <a href="https://www.nature.com/srep/about/editors#electrical-engineering">Scientific Reports</a>; <a href="https://journals.plos.org/plosone/static/editorial-board">PLOS ONE</a>;</li>
 					<li>SI guest editor:
 						<ul class="lead">
 							<li>Wireless Communications and Mobile Computing: <a href="https://www.hindawi.com/journals/wcmc/si/781378/">[1]</a>, <a href="http://downloads.hindawi.com/journals/wcmc/si/193986.pdf">[2]</a></li>
