--- a/nndao.html
+++ b/nndao.html
@@ -104,7 +104,7 @@
 						</ul>
 					</li>
 					<li>Invited talks: <a href="http://due.udn.vn/vi-vn/computing4human-intro/cid/4675">Computing4Human2021</a>;</li>
-					<li>Organizing committee member: <a href="https://doi.org/10.1007/978-3-031-15063-0">ICIT2022</a>, <a href="https://doi.org/10.1109/ICTC55196.2022.9952520">ICTC2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
+					<li>Organizing committee member: ICIT2023, <a href="https://doi.org/10.1007/978-3-031-15063-0">ICIT2022</a>, <a href="https://doi.org/10.1109/ICTC55196.2022.9952520">ICTC2022</a>, <a href="https://doi.org/10.1109/ICOIN50884.2021.9334031">ICOIN2021</a>;</li>
 					<li>TPC member: <a href="https://doi.org/10.1109/CyberneticsCom55287.2022.9865342">CyberneticsCom2022</a>, <a href="https://doi.org/10.1109/COMNETSAT53002.2021.9530800">COMNETSAT2021</a>, <a href="https://doi.org/10.1109/Comnetsat50391.2020.9328945">COMNETSAT2020</a>, <a href="https://doi.org/10.1109/ISCIT.2019.8905141">ISCIT2019</a>, <a href="https://doi.org/10.1109/ICECIE47765.2019.8974660">ICECIE2019</a>, <a href="https://doi.org/10.1109/ICOIN.2018.8343069">ICOIN2018</a>;</li>
 					<li>Reviewer: IEEE JSAC, TVT, TCC, TITS, IOTJ, CIM, WCM, ACCESS, COMSTD, Elsevier JNCA, Wiley NEM, Springer WIRE, etc.</li>
 				</ul>
