--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="gray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Next institution: __ </i> </font> </li>
+            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="gray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -78,7 +78,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>BOOKS (CHAPTERS) <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ul class="lead" style="list-style-type:square">
-        <li>Nguyen NT, <b>Dao NN</b>, Pham QD, and Le HA [Eds], "Intelligence of things: Technologies and applications - Proceedings of the first international conference on intelligence of things (ICIT 2022)", Springer, Cham, Switzerland, 2022. [<a href="https://doi.org/10.1007/978-3-031-15063-0">Springer</a>]</li>
+        <li><b>Dao NN</b> et al. [Eds], "Intelligence of things: Technologies and applications - Proceedings of the international conference on intelligence of things (ICIT)", Springer, Cham, Switzerland, <a href="https://doi.org/10.1007/978-3-031-15063-0">2022</a> and 2023 (<a href="https://www.springer.com/book/9783031465727">vol. 1</a>, <a href="https://link.springer.com/book/9783031467486">vol. 2</a>). [<a href="https://link.springer.com/conference/icit3">Springer</a>]</li>
 				<li><b>Dao NN</b>, Dinh NT, Pham QV, Phan TV, Cho S, and Braun T, "Vulnerabilities in fog/edge computing from architectural perspectives", Chapter 8, in <i>Fog/edge computing for security, privacy, and applications</i>, Wu J and Chang W [Eds], Springer, Cham, Switzerland, 2021. [<a href="https://doi.org/10.1007/978-3-030-57328-7_8">Springer</a>]</li>
 				<li><b>Dao NN</b>, Tran QD, Dinh NT, Cho S, and Braun T, "Edge computing architectures", Chapter 2, in <i>Edge computing: Models, technologies and applications</i>, Taheri J and Deng S [Eds], The Institution of Engineering and Technology (IET), London, UK, 2020. [<a href="https://doi.org/10.1049/PBPC033E_ch2">IET</a>]</li>
 			  </ul>
