--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container text-center">
 		<img src="logo.png" width="293" height="86">
       <!-- <h1>PSHH Laboratory</h1> -->
-      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="#research">#intro</a>] [<a href="#member">#members</a>] [<a href="#project">#projects</a>] [<a href="#chapter">#publications</a>] [<a href="photos">#photos</a>]</p>
+      <p class="lead" style="text-align:center;"><br>Department of Computer Science and Engineering, Sejong University, Seoul 05006, Korea<br>[<a href="#research">#intro</a>] [<a href="#member">#members</a>] [<a href="#project">#projects</a>] [<a href="#chapter">#publications</a>]</p>
     </div>
   </header>
 
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
+        <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>. In press. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
