--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>INTRODUCTION <a href="#page-top" title="Home">&#9776;</a></h5>
           <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at the Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications with the aim of intelligent people networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudification, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family. Korean and international citizens are all welcome!</p>
+          <p class="lead"><font color="slategray" size="3">Feature article: Dao NN <i> et al.</i>, "Toward privacy-sensitive heterogeneous hypercomputing", to appear in <i>IEEE Communications Magazine</i> [<a href="">IEEE</a>]|[<a href="/pshhcommag.pdf">PDF</a>]</font></p>
         </div>
       </div>
     </div>
@@ -49,7 +50,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="gray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
+            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -93,6 +94,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Samanta A, Pham QV, <b>Dao NN</b>, Muthanna A, and Cho S, "mISO: Incentivizing demand-agnostic microservices for edge-enabled IoT networks", <i>IEEE Transactions on Services Computing</i>. In press. [<a href="https://doi.org/10.1109/TSC.2023.3292362">IEEE</a>]</li>
         <li>Hua DT, Do QT, <b>Dao NN</b>, Nguyen TV, Lakew DS, and Cho S, "Learning-based reconfigurable intelligent surface-aided rate-splitting multiple access networks", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 20, pp. 17603-17619, 2023. [<a href="https://doi.org/10.1109/JIOT.2023.3279196">IEEE</a>]</li>
