--- a/marathon.html
+++ b/marathon.html
@@ -23,7 +23,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 1100px;
   position: relative;
   margin: auto;
 }
@@ -93,22 +93,18 @@ img {vertical-align: middle;}
 
 <br>
 <div class="slideshow-container">
-
-<div class="mySlides fade">
-  <img src="marathon/Seoul Marathon 20190317.jpg" style="width:100%; height:100%">
-  <div class="text">Seoul Marathon, 4:55:29, March 17, 2019, Seoul, South Korea</div>
-</div>
-
-<div class="mySlides fade">
-  <img src="marathon/Brussels Marathon 20191006.jpg" style="width:100%; height:100%">
-  <div class="text">Brussels Marathon, 4:45:05, October 6, 2019, Brussels, Belgium</div>
-</div>
-
 <div class="mySlides fade">
   <img src="marathon/Ljubljana Marathon 20191027.jpg" style="width:100%; height:100%">
-  <div class="text">Ljubljana Marathon, 4:49:37, October 27, 2019, Ljubljana, Slovenia</div>
+  <div class="text">Ljubljana Marathon, 4:49:37 (42K), October 27, 2019, Ljubljana, Slovenia</div>
 </div>
-
+<div class="mySlides fade">
+  <img src="marathon/Brussels Marathon 20191006.jpg" style="width:100%; height:100%">
+  <div class="text">Brussels Marathon, 4:45:05 (42K), October 6, 2019, Brussels, Belgium</div>
+</div>
+<div class="mySlides fade">
+  <img src="marathon/Seoul Marathon 20190317.jpg" style="width:100%; height:100%">
+  <div class="text">Seoul Marathon, 4:55:29 (42K), March 17, 2019, Seoul, South Korea</div>
+</div>
 </div>
 <br>
 
@@ -117,6 +113,7 @@ img {vertical-align: middle;}
   <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
+<br>
 
 <script>
 let slideIndex = 0;
@@ -140,6 +137,19 @@ function showSlides() {
 }
 </script>
 
+  <section id="chapter" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+        <ol reversed class="lead">
+        <li>Ljubljana Marathon, 4:49:37 (42K), October 27, 2019, Ljubljana, Slovenia</li>
+        <li>Brussels Marathon, 4:45:05 (42K), October 6, 2019, Brussels, Belgium</li>
+        <li>Seoul Marathon, 4:55:29 (42K), March 17, 2019, Seoul, South Korea</li>
+        </ol>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
