--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j48"> [48] </a>, <a href="#j49"> [49] </a>, <a href="#j62"> [62] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
+            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j61"> [61] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -94,7 +94,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li id="j62"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="">IEEE</a>]</li>
+        <li id="j61"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
         <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>. In press. [<a href="">IEEE</a>]</li>
@@ -107,8 +107,8 @@
         <li>Na W, Kim N, <b>Dao NN</b>, and Cho S, "Machine learning-based communication failure identification scheme for directional industrial IoT networks", <i>IEEE Systems Journal</i>, vol. 17, no. 1, pp. 1559-1568, 2023. [<a href="https://doi.org/10.1109/JSYST.2022.3192066">IEEE</a>]</li>
         <li>Truong TP, Tuong VD, <b>Dao NN</b>, and Cho S, "FlyReflect: Joint flying IRS trajectory and phase shift design using deep reinforcement learning", <i>IEEE Internet of Things Journal</i>, vol. 10, no. 5, pp. 4605-4620, 2023. [<a href="https://doi.org/10.1109/JIOT.2022.3218740">IEEE</a>]</li>
         <li><b>Dao NN</b>, Tu NH, Thanh TT, Bao VNQ, Na W, and Cho S, "Neglected infrastructures for 6G–Underwater communications: How mature are they?", <i>Journal of Network and Computer Applications</i>, vol. 213, p. 103595, 2023. [<a href="https://doi.org/10.1016/j.jnca.2023.103595">Elsevier</a>]</li>
-        <li id="j49"><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>, vol. 211, p. 103564, 2023. [<a href="https://doi.org/10.1016/j.jnca.2022.103564">Elsevier</a>]</li>
-        <li id="j48"><b>Nguyen TV</b>, Tran AT, <b>Dao NN</b>, Moon H, and Cho S, "Information fusion on delivery: A survey on the roles of mobile edge caching systems", <i>Information Fusion</i>, vol. 89, pp. 486-509, 2023. [<a href="https://doi.org/10.1016/j.inffus.2022.08.029">Elsevier</a>]</li>
+        <li id="j48"><b>Nguyen TV</b>, Nguyen NP, Kim C, and <b>Dao NN</b>, "Intelligent aerial video streaming: Achievements and challenges", <i>Journal of Network and Computer Applications</i>, vol. 211, p. 103564, 2023. [<a href="https://doi.org/10.1016/j.jnca.2022.103564">Elsevier</a>]</li>
+        <li id="j47"><b>Nguyen TV</b>, Tran AT, <b>Dao NN</b>, Moon H, and Cho S, "Information fusion on delivery: A survey on the roles of mobile edge caching systems", <i>Information Fusion</i>, vol. 89, pp. 486-509, 2023. [<a href="https://doi.org/10.1016/j.inffus.2022.08.029">Elsevier</a>]</li>
         <li><b>Dao NN</b>, "Internet of wearable things: Advancements and benefits from 6G technologies", <i>Future Generation Computer Systems</i>, vol. 138, pp. 172-184, 2023. [<a href="https://doi.org/10.1016/j.future.2022.07.006">Elsevier</a>]</li>
         <li><b>Dao NN</b>, Tran AT, Tu NH, Thanh TT, Bao VNQ, and Cho S, "A contemporary survey on live video streaming from a computation-driven perspective", <i>ACM Computing Surveys</i>, vol. 54, no. 10s, p. 202, 2022. [<a href="https://doi.org/10.1145/3519552">ACM</a>]</li>
         <li><b>Dao NN</b>, Do TH, Cho S, and Dustdar S, "Information revealed by vision: A review on the next-generation OCC standard for AIoV", <i>IT Professional</i>, vol. 24, no. 4, pp. 58-65, 2022. [<a href="https://doi.org/10.1109/MITP.2022.3180354">IEEE</a>]</li>
@@ -156,7 +156,7 @@
 				<li><b>Dao NN</b>, Park M, Kim J, and Cho S, "Adaptive MCS selection and resource planning for energy-efficient communication in LTE-M based IoT sensing platform", <i>PLoS ONE</i>, vol. 12, no. 8, p. e0182527, 2017. [<a href="https://doi.org/10.1371/journal.pone.0182527">PLoS</a>]</li>
 				<li><b>Dao NN</b>, Lee J, Vu DN, Paek J, Kim J, Cho S, Chung KS, and Keum C, "Adaptive resource balancing for serviceability maximization in fog radio access networks", <i>IEEE Access</i>, vol. 5, pp. 14548-14559, 2017. [<a href="https://doi.org/10.1109/ACCESS.2017.2712138">IEEE</a>]</li>
 				<li><b>Dao NN</b>, Kim J, Park M, and Cho S, "Adaptive suspicious prevention for defending DoS attacks in SDN-based convergent networks", <i>PLoS ONE</i>, vol. 11, no. 8, p. e0160375, 2016. [<a href="https://doi.org/10.1371/journal.pone.0160375">PLoS</a>]</li>
-				<li>Lee CG, <b>Dao NN</b>, Jang S, Kim D, Kim Y, and Cho S, "Gyro drift correction for an indirect Kalman filter based sensor fusion driver", <i>Sensors</i>, vol. 16, no. 6, p. 864, 2016. [<a href="https://doi.org/10.3390/s16060864">MDPI</a>]</li>
+<!--				<li>Lee CG, <b>Dao NN</b>, Jang S, Kim D, Kim Y, and Cho S, "Gyro drift correction for an indirect Kalman filter based sensor fusion driver", <i>Sensors</i>, vol. 16, no. 6, p. 864, 2016. [<a href="https://doi.org/10.3390/s16060864">MDPI</a>]</li> -->
 				<li>Na W, <b>Dao NN</b>, and Cho S, "Mitigating WiFi interference to improve throughput for in-vehicle infotainment networks", <i>IEEE Wireless Communications</i>, vol. 23, no. 1, pp. 22-28, 2016. [<a href="https://doi.org/10.1109/MWC.2016.7422402">IEEE</a>]</li>
 				<li>Na W, <b>Dao NN</b>, and Cho S, "Reliable multicasting service for densely deployed military sensor networks", <i>International Journal of Distributed Sensor Networks</i>, vol. 11, no. 8, p. 341912, 2015. [<a href="https://doi.org/10.1155/2015/341912">Hindawi</a>]</li>
 			  </ol>
