--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Masood A, <b>Dao NN</b>, and Cho S, "Privacy-preserving intelligent content-caching scheme in heterogeneous aerial access networks", <i>Expert Systems with Applications</i>. In press [<a href="">Elsevier</a>]</li>
         <li id="j61"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>. In press. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
         <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="">IEEE</a>]</li>
