--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <h5>MEMBERS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
+            <li>Tuan Anh Nguyen (Vietnam), PhD student since 3/2024</li>
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
