--- a/info.html
+++ b/info.html
@@ -143,7 +143,6 @@
               <li>Computers & Security (Elsevier) </li>
               <li>ACM Transactions on Information Systems (ACM) </li>
               <li>IEEE-ACM Transactions on Networking (IEEE/ACM) </li>
-              <li>Neural Computing & Applications (Springer) </li>
               <li>IEEE Systems Journal (IEEE) </li>
               <li>IEEE Transactions on Network and Service Management (IEEE) </li>
               <li>IEEE Internet Computing (IEEE) </li>
@@ -172,8 +171,7 @@
               <li>ACM Conference on Human Factors in Computing Systems (CHI)</li>
               <li>ACM Multimedia Conference (MM)</li>
               <li>IEEE Symposium on Security and Privacy (S&P)</li>
-              <li>The Web Conference (WWW)</li>
-              <li>USENIX Symposium on Networked Systems Design and Implementation (NSDI)</li>
+              <li>ACM Web Conference (WWW)</li>
               <li>ACM Conference on Embedded Networked Sensor Systems (SenSys)</li>
               <li>USENIX Security Symposium (Security)</li>
               <li>ACM International Conference on Mobile Systems, Application and Services (MobiSys)</li>
