--- a/info.html
+++ b/info.html
@@ -100,56 +100,57 @@
         <div class="col-lg-12 mx-auto">
           <h5>Potential Journals</h5>
             <ol class="lead">
-              <li>IEEE Communications Surveys and Tutorials (IEEE) </li>
-              <li>Proceedings of the IEEE (IEEE) </li>
-              <li>IEEE Wireless Communications (IEEE) </li>
-              <li>Computer Science Review (Elsevier) </li>
-              <li>IEEE Journal on Selected Areas in Communications (IEEE) </li>
-              <li>Information Fusion (Elsevier) </li>
-              <li>IEEE Internet of Things Journal (IEEE) </li>
-              <li>ACM Computing Surveys (ACM) </li>
-              <li>Journal of Network and Computer Applications (Elsevier) </li>
-              <li>Artificial Intelligence (Elsevier) </li>
-              <li>IEEE Transactions on Services Computing (IEEE) </li>
-              <li>IEEE Communications Magazine (IEEE) </li>
-              <li>IEEE Transactions on Network Science and Engineering (IEEE) </li>
-              <li>Artificial Intelligence Review (Springer) </li>
-              <li>IEEE Network (IEEE) </li>
-              <li>IEEE Transactions on Multimedia (IEEE) </li>
-              <li>Engineering Applications of Artificial Intelligence (Elsevier) </li>
-              <li>IEEE Transactions on Wireless Communications (IEEE) </li>
-              <li>Expert Systems with Applications (Elsevier) </li>
-              <li>Journal of Big Data (Springer) </li>
-              <li>Future Generation Computer Systems (Elsevier) </li>
-              <li>IEEE Transactions on Cognitive Communications and Networking (IEEE) </li>
-              <li>Reliability Engineering & System Safety (Elsevier) </li>
-              <li>IEEE Transactions on Communications (IEEE) </li>
-              <li>IEEE Transactions on Mobile Computing (IEEE) </li>
-              <li>IEEE Vehicular Technology Magazine (IEEE) </li>
-              <li>IEEE Transactions on Information Forensics and Security (IEEE) </li>
-              <li>Digital Communications and Networks (Elsevier) </li>
-              <li>IEEE Transactions on Cloud Computing (IEEE) </li>
-              <li>ACM Transactions on Internet Technology (ACM) </li>
-              <li>Knowledge-Based Systems (Elsevier) </li>
-              <li>IEEE Transactions on Vehicular Technology (IEEE) </li>
-              <li>Computer Networks (Elsevier) </li>
-              <li>ACM Transactions on Multimedia Computing Communications and Applications (ACM) </li>
-              <li>Vehicular Communications (Elsevier) </li>
-              <li>Computer Communications (Elsevier) </li>
-              <li>Internet of Things (Elsevier) </li>
-              <li>Virtual Reality (Springer) </li>
-              <li>IEEE Sensors Journal (IEEE) </li>
-              <li>Journal of Information Security and Applications (Elsevier) </li>
-              <li>Computers & Security (Elsevier) </li>
-              <li>ACM Transactions on Information Systems (ACM) </li>
-              <li>IEEE-ACM Transactions on Networking (IEEE/ACM) </li>
-              <li>IEEE Systems Journal (IEEE) </li>
-              <li>IEEE Transactions on Network and Service Management (IEEE) </li>
-              <li>IEEE Internet Computing (IEEE) </li>
-              <li>ACM Transactions on Sensor Networks (ACM) </li>
-              <li>IEEE Security and Privacy (IEEE) </li>
-              <li>ACM Transactions on Privacy and Security (ACM) </li>
-              <li>IEEE Pervasive Computing (IEEE) </li>
+              <i>IEEE Communications Surveys and Tutorials (IEEE)</i>
+              <i>Proceedings of the IEEE (IEEE)</i>
+              <i>IEEE Wireless Communications (IEEE)</i>
+              <i>Computer Science Review (Elsevier)</i>
+              <i>IEEE Journal on Selected Areas in Communications (IEEE)</i>
+              <i>Information Fusion (Elsevier)</i>
+              <i>IEEE Internet of Things Journal (IEEE)</i>
+              <i>ACM Computing Surveys (ACM)</i>
+              <i>Journal of Network and Computer Applications (Elsevier)</i>
+              <i>Artificial Intelligence (Elsevier)</i>
+              <i>IEEE Transactions on Services Computing (IEEE)</i>
+              <i>IEEE Communications Magazine (IEEE)</i>
+              <i>IEEE Transactions on Network Science and Engineering (IEEE)</i>
+              <i>Artificial Intelligence Review (Springer)</i>
+              <i>IEEE Network (IEEE)</i>
+              <i>IEEE Transactions on Multimedia (IEEE)</i>
+              <i>Engineering Applications of Artificial Intelligence (Elsevier)</i>
+              <i>IEEE Transactions on Dependable and Secure Computing (IEEE)</i>
+              <i>IEEE Transactions on Wireless Communications (IEEE)</i>
+              <i>Expert Systems with Applications (Elsevier)</i>
+              <i>Journal of Big Data (Springer)</i>
+              <i>Future Generation Computer Systems (Elsevier)</i>
+              <i>IEEE Transactions on Cognitive Communications and Networking (IEEE)</i>
+              <i>Reliability Engineering & System Safety (Elsevier)</i>
+              <i>IEEE Transactions on Communications (IEEE)</i>
+              <i>IEEE Transactions on Mobile Computing (IEEE)</i>
+              <i>IEEE Vehicular Technology Magazine (IEEE)</i>
+              <i>IEEE Transactions on Information Forensics and Security (IEEE)</i>
+              <i>Digital Communications and Networks (Elsevier)</i>
+              <i>IEEE Transactions on Cloud Computing (IEEE)</i>
+              <i>ACM Transactions on Internet Technology (ACM)</i>
+              <i>Knowledge-Based Systems (Elsevier)</i>
+              <i>IEEE Transactions on Vehicular Technology (IEEE)</i>
+              <i>Computer Networks (Elsevier)</i>
+              <i>ACM Transactions on Multimedia Computing Communications and Applications (ACM)</i>
+              <i>Vehicular Communications (Elsevier)</i>
+              <i>Computer Communications (Elsevier)</i>
+              <i>Internet of Things (Elsevier)</i>
+              <i>Virtual Reality (Springer)</i>
+              <i>IEEE Sensors Journal (IEEE)</i>
+              <i>Journal of Information Security and Applications (Elsevier)</i>
+              <i>Computers & Security (Elsevier)</i>
+              <i>ACM Transactions on Information Systems (ACM)</i>
+              <i>IEEE-ACM Transactions on Networking (IEEE/ACM)</i>
+              <i>IEEE Systems Journal (IEEE)</i>
+              <i>IEEE Transactions on Network and Service Management (IEEE)</i>
+              <i>IEEE Internet Computing (IEEE)</i>
+              <i>ACM Transactions on Sensor Networks (ACM)</i>
+              <i>IEEE Security and Privacy (IEEE)</i>
+              <i>ACM Transactions on Privacy and Security (ACM)</i>
+              <i>IEEE Pervasive Computing (IEEE)</i>
             </ol>
         </div>
       </div>
