--- a/info.html
+++ b/info.html
@@ -121,6 +121,7 @@
               <li>IEEE Transactions on Wireless Communications (IEEE)</li>
               <li>Expert Systems with Applications (Elsevier)</li>
               <li>Journal of Big Data (Springer)</li>
+              <li>Information Sciences (Elsevier)</li>
               <li>Future Generation Computer Systems (Elsevier)</li>
               <li>IEEE Transactions on Cognitive Communications and Networking (IEEE)</li>
               <li>Reliability Engineering & System Safety (Elsevier)</li>
