--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="col-lg-12 mx-auto">
           <h5>INTRODUCTION <a href="#page-top" title="Home">&#9776;</a></h5>
           <p class="lead">Privacy-Sensitive Heterogeneous Hypercomputing (PSHH) lab is led by <a href="nndao">Dr. Nhu-Ngoc Dao</a> at the Department of Computer Science and Engineering, Sejong University, Seoul. Our lab investigates technological challenges in the research fields of networks, systems, and communications with the aim of intelligent people networking. Currently, we focus on developing cutting-edge solutions of network softwarization, mobile cloudification, intelligent systems, and the Intelligence of Things toward B5G/6G. Directly contact <a href="nndao">Nhu-Ngoc Dao</a> if you are willing to be a member of our family. Korean and international citizens are all welcome!</p>
-          <p class="lead"><font color="slategray" size="3">Feature article: Dao NN et al., "Toward privacy-sensitive heterogeneous hypercomputing", to appear in <i>IEEE Communications Magazine</i> [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]|[<a href="/pshhcommag.pdf">PDF</a>]</font></p>
+          <p class="lead"><font color="slategray" size="3">Feature article: Dao NN et al., "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>, vol. 62, no. 4, pp. 24-30, 2024. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]|[<a href="/pshhcommag.pdf">PDF</a>]</font></p>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
             <li>Teshager Hailemariam Moges (Ethiopia), MS student since 9/2022</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
             <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li>The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
+            <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -95,10 +95,10 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
-        <li><b>Dao NN</b>, Tu NH, Hoang TD, Nguyen TH, Nguyen LV, Lee K, Park L, Na W, and Cho S, "A review on new technologies in 3GPP standards for 5G access and beyond", <i>Computer Networks</i>. In press. [<a href="https://doi.org/10.1016/j.comnet.2024.110370">Elsevier</a>]</li>
         <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2023.3349321">IEEE</a>]</li>
-        <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>. In press. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
+        <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>, vol. 62, no. 4, pp. 24-30, 2024. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
+        <li><b>Dao NN</b>, Tu NH, Hoang TD, Nguyen TH, Nguyen LV, Lee K, Park L, Na W, and Cho S, "A review on new technologies in 3GPP standards for 5G access and beyond", <i>Computer Networks</i>, vol. 245, p. 110370, 2024. [<a href="https://doi.org/10.1016/j.comnet.2024.110370">Elsevier</a>]</li>
         <li>Kim N, Na W, Lakew DS, <b>Dao NN</b>, and Cho S, "DQN-based directional MAC protocol in wireless ad hoc network in Internet of things", <i>IEEE Internet of Things Journal</i>, vol. 11, no. 7, pp. 12918-12928, 2024. [<a href="https://doi.org/10.1109/JIOT.2023.3338562">IEEE</a>]</li>
         <li id="j60"><b>Nguyen TV</b>, Hua DT, Huong TH, Hoang VT, <b>Dao NN</b>, and Cho S, "Intelligent QoE management for IoMT streaming services in multi-user downlink RSMA networks", <i>IEEE Internet of Things Journal</i>, vol. 11, no. 7, pp. 12602-12618, 2024. [<a href="https://doi.org/10.1109/JIOT.2023.3334473">IEEE</a>]</li>
         <li>Tran NP, Truong TP, Do QT, <b>Dao NN</b>, and Cho S, "Joint wireless resource allocation and bitrate adaptation for QoE improvement in IRS-aided RSMA-enabled IoMT streaming systems", <i>Internet of Things</i>, vol. 25, p. 101145, 2024. [<a href="https://doi.org/10.1016/j.iot.2024.101145">Elsevier</a>]</li>
