--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <h5>MEMBERS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
       			<li>Nhu-Ngoc Dao, Assistant Professor, Director</li>
-            <li>Tuan Anh Nguyen (Vietnam), PhD student since 3/2024</li>
+            <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
             <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
-            <li>Samuel Harry Gardner (UK), BS student since 3/2022</li>
-            <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: LG Innotek Korea</i> </font> </li>
-            <li style="list-style-type:disc">Teshager Hailemariam Moges (Ethiopia), MS student, 9/2022~8/2024 <font color="slategray" size="3"> <i> <br>- Thesis title: Trajectory optimization for mission-critical UAV systems in SCMA networks <br>- Research achievement: <a href="#j54"> [54] </a> <br>- Next place: TBU</i> </font> </li>
+            <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
+            <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: R&D Engineer, LG Innotek, South Korea</i> </font> </li>
+            <li style="list-style-type:disc">Teshager Hailemariam Moges (Ethiopia), MS student, 9/2022~8/2024 <font color="slategray" size="3"> <i> <br>- Thesis title: Trajectory optimization for mission-critical UAV systems in SCMA networks <br>- Research achievement: <a href="#j54"> [54] </a> <br>- Next place: Lecturer, Wollo University, Ethiopia</i> </font> </li>
       		  </ul>
         </div>
       </div>
@@ -64,10 +64,10 @@
         <div class="col-lg-12 mx-auto">
           <h5>PROJECTS <a href="#page-top" title="Home">&#9776;</a></h5>
       		  <ul class="lead" style="list-style-type:square">
-            <li>Assisting natural beekeeping in rural and remote areas using LoRa-based IoT and drones, ISIF Asia (APNIC), 01/2023-06/2024.</li>
             <li>Development of end-to-end 8 ultra-communication and networking technologies, IITP (Korea), 07/2022-12/2029.</li>
-      			<li>Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, NRF (Korea), 03/2021-02/2024.</li>
-      			<li>Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, IACF (SJU), 03/2020-02/2021.</li>
+            <li style="list-style-type:disc">Assisting natural beekeeping in rural and remote areas using LoRa-based IoT and drones, ISIF Asia (APNIC), 01/2023-06/2024.</li>
+      			<li style="list-style-type:disc">Intelligent adaptive bitrate video streaming empowered by cross-tier user-centric edge caching systems, NRF (Korea), 03/2021-02/2024.</li>
+      			<li style="list-style-type:disc">Hit ratio and content quality tradeoff for adaptive bitrate streaming in edge caching systems, IACF (SJU), 03/2020-02/2021.</li>
       		  </ul>
         </div>
       </div>
