--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <div class="col-lg-12 mx-auto">
         <h5>JOURNAL PUBLICATIONS [<a href="#project" title="Project">&#9651;</a>] [<a href="#conference" title="Conference publication">&#9661;</a>] <a href="#page-top" title="Home">&#9776;</a></h5>
 			  <ol reversed class="lead">
+        <li>Truong TP, Nguyen HV, <b>Dao NN</b>, Noh W, and Cho S, "Orthogonalized RSMA based flexible multiple access in digital twin edge networks", <i>IEEE Transactions on Wireless Communications</i>. In press. [<a href="https://doi.org">IEEE</a>]</li>
         <li>Lakew DS, Tran AT, <b>Dao NN</b>, and Cho S, "Intelligent self-optimization for task offloading in LEO-MEC-assisted energy-harvesting-UAV systems", <i>IEEE Transactions on Network Science and Engineering</i>. In press. [<a href="https://doi.org/10.1109/TNSE.2023.3349321">IEEE</a>]</li>
         <li>Nguyen TH, Truong TP, Tran AT, <b>Dao NN</b>, Park L, and Cho S, "Intelligent heterogeneous aerial edge computing for advanced 5G access", <i>IEEE Transactions on Network Science and Engineering</i>, vol. 11, no. 4, pp. 3398-3411, 2024. [<a href="https://doi.org/10.1109/TNSE.2024.3371434">IEEE</a>]</li>
         <li><b>Dao NN</b>, Na W, Cho S, and Dustdar S, "Toward privacy-sensitive heterogeneous hypercomputing", <i>IEEE Communications Magazine</i>, vol. 62, no. 4, pp. 24-30, 2024. [<a href="https://doi.org/10.1109/MCOM.001.2300145">IEEE</a>]</li>
