--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li>Tuan Anh Nguyen (Vietnam), PhD student since 9/2024</li>
             <li>Minh Phuoc Nguyen (Vietnam), MS student since 9/2024</li>
             <li>Samuel Harry Gardner (UK), BS student, 3/2022~8/2024, MS student since 9/2024</li>
-            <li>Fayshal Ahmed (Bangladesh), MS student since 3/2023</li>
+            <li style="list-style-type:disc">Fayshal Ahmed (Bangladesh), MS student 3/2023~2/2025 <font color="slategray" size="3"> <i> <br>- Thesis title: On QoE optimization for live streaming services in multi-user uplink RSMA networks <br>- Research achievement:  <br>- Next place: PhD student, Pukyong National University, Korea</i> </font> </li>
             <li style="list-style-type:disc">Teshager Hailemariam Moges (Ethiopia), MS student, 9/2022~8/2024 <font color="slategray" size="3"> <i> <br>- Thesis title: Trajectory optimization for mission-critical UAV systems in SCMA networks <br>- Research achievement: <a href="#j54"> [54] </a> <br>- Next place: Lecturer, Wollo University, Ethiopia</i> </font> </li>
             <li style="list-style-type:disc">The-Vinh Nguyen (Vietnam), MS student, 9/2021~8/2023 <font color="slategray" size="3"> <i> <br>- Thesis title: QoE optimisation of video streaming services in RSMA networks: A deep reinforcement learning approach <br>- Research achievement: <a href="#j47"> [47] </a>, <a href="#j48"> [48] </a>, <a href="#j60"> [60] </a> <br>- Next place: R&D Engineer, LG Innotek, South Korea</i> </font> </li>
       		  </ul>
